# phomemer

./: .env.dist  .gitignore  Dockerfile  README.md  angular.json  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  send.py  tsconfig.json
.github/workflows/: docker-publish.yml
frontend/: .gitignore  .prettierrc.json  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json  proxy.conf.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
frontend/.husky/: pre-commit
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/api-service/: api.service.ts
frontend/src/app/canvas-page/: canvas-page.component.html  canvas-page.component.scss  canvas-page.component.ts
frontend/src/app/data/: paper-sizes.ts  printer.model.ts  printers.model.ts
frontend/src/app/models/: paper.model.ts  printer.model.ts
frontend/src/app/service/: print.service.ts
phomeme/: __init__.py  config.py
phomeme/config/: paper.json  printer.json
phomeme/static/: index.html  main-3563ZZRY.js  main-AY3BBBS5.js  main-I7DHFXEZ.js  scripts-EVFRXDTX.js  styles-XGEAKKIW.css
src/: index.html
src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/canvas-page/: canvas-page.component.html  canvas-page.component.scss  canvas-page.component.ts
