[tool.poetry]
name = "phomeme"
version = "0.1.0"
description = ""
authors = ["foosinn <stefan@f2o.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.2"
pillow = "^10.2.0"
gunicorn = "^21.2.0"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
